# linux_cpp_project

./: README.md
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  main.cpp  mymath.cpp
demo3/: CMakeLists.txt  main.cpp
demo3/mylib/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/mylib/: CMakeLists.txt
demo4/src/: CMakeLists.txt  main.cpp
demo5/: CMakeLists.txt
demo5/src/: CMakeLists.txt  main.cpp
